# pipe

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1wsj263xvdx0qiihgfix13s9scrxcn1y-source  hhccdmpa2bhqbagn2zgmgrwjbcdinn55-source  ig1vs8paxvbkjkzfz8qxka3ffvmwfxnh-source  j4qvnmfa400h674fp23lsd4pgsr2yr6l-source
.github/workflows/: ci.yml
benches/: operators.rs
docs/: ADR-001-operator-fusion-strategy.md  ADR-002-connector-strategy.md  ADR-003-grpc-connector.md  ADR-004-grpc-server-handler.md  TRACKER.md
examples/: tcp_server.rs
lazyflow-grpc/: Cargo.toml
lazyflow-grpc/src/: lib.rs  serve.rs  streaming.rs
lazyflow-grpc/tests/: serve_integration.rs  streaming_integration.rs
lazyflow-http/: Cargo.toml
lazyflow-http/examples/: sse_consumer.rs  ws_echo_client.rs
lazyflow-http/src/: lib.rs  sse.rs  ws.rs
lazyflow-http/tests/: sse_integration.rs  ws_integration.rs
lazyflow-io/: Cargo.toml
lazyflow-io/src/: file.rs  lib.rs  net.rs
lazyflow-macros/: Cargo.toml
lazyflow-macros/src/: lib.rs
pipe-grpc/: Cargo.toml  build.rs
pipe-grpc/src/: lib.rs  serve.rs  streaming.rs
pipe-grpc/tests/: serve_integration.rs  streaming_integration.rs
pipe-grpc/tests/proto/: test.proto
pipe-http/: Cargo.toml
pipe-http/examples/: sse_consumer.rs  ws_echo_client.rs
pipe-http/src/: lib.rs  sse.rs  ws.rs
pipe-http/tests/: sse_integration.rs  ws_integration.rs
pipe-io/: Cargo.toml
pipe-io/src/: file.rs  lib.rs  net.rs
pipe-macros/: Cargo.toml
pipe-macros/src/: lib.rs
src/: cancel.rs  channel.rs  io.rs  lib.rs  meter.rs  operator.rs  pipeline.rs  pull.rs  signal.rs  sink.rs  stream.rs  topic.rs  transform.rs
src/pipeline/: async_ops.rs  concurrency.rs  constructors.rs  error.rs  mod.rs  operators.rs  pull_ops.rs  terminals.rs  time.rs
tests/: integration.rs  macro_tests.rs  property_tests.rs
