[workspace]
members = [".", "pipe-macros", "pipe-io"]

[package]
name = "pipe"
version = "0.3.1"
edition = "2021"
description = "A lazy, effectful streaming library for Rust -- FS2-inspired Pipe<B> with pull-based sources, async transforms, backpressure, and concurrency"
license = "MIT"
repository = "https://github.com/hamidr/pipe"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "time", "net"] }
futures-core = "0.3"
pipe-macros = { path = "pipe-macros" }

[dev-dependencies]
pipe-io = { path = "pipe-io" }
