[workspace]
members = [".", "pipe-macros", "pipe-io", "pipe-http"]

[package]
name = "pipe"
version = "0.5.1"
edition = "2024"
rust-version = "1.85"
description = "A lazy, effectful streaming library for Rust -- FS2-inspired Pipe<B> with pull-based sources, async transforms, backpressure, and concurrency"
license = "MIT"
repository = "https://github.com/hamidr/pipe"
readme = "README.md"
keywords = ["async", "streaming", "pipeline", "pull-based", "backpressure"]
categories = ["asynchronous", "concurrency"]
exclude = ["tests/", "examples/", ".github/", ".direnv/", ".envrc"]

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "time", "net"] }
futures-core = "0.3"
pipe-macros = { path = "pipe-macros" }

[dev-dependencies]
pipe-io = { path = "pipe-io" }
proptest = "1"
tokio-test = "0.4"
