[workspace]
members = [".", "lazyflow-macros", "lazyflow-io", "lazyflow-http", "lazyflow-grpc"]

[package]
name = "lazyflow"
version = "0.6.2"
edition = "2024"
rust-version = "1.85"
description = "A lazy, effectful streaming library for Rust -- FS2-inspired LazyFlow<B> with pull-based sources, async transforms, backpressure, and concurrency"
license = "MIT"
repository = "https://github.com/hamidr/lazyflow"
readme = "README.md"
keywords = ["async", "streaming", "pipeline", "pull-based", "backpressure"]
categories = ["asynchronous", "concurrency"]
exclude = ["tests/", "examples/", ".github/", ".direnv/", ".envrc"]

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "time", "net"] }
futures-core = "0.3"
lazyflow-macros = { path = "lazyflow-macros", version = "0.6.2" }

[dev-dependencies]
lazyflow-io = { path = "lazyflow-io", version = "0.6.2" }
proptest = "1"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "operators"
harness = false
