[package]
name = "lazyflow-macros"
version = "0.6.2"
edition = "2024"
rust-version = "1.85"
description = "Procedural macros for lazyflow -- #[operator], #[pull_operator], #[pipe_fn]"
license = "MIT"
repository = "https://github.com/hamidr/lazyflow"
keywords = ["async", "streaming", "pipeline", "proc-macro"]
categories = ["asynchronous"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
