[package]
name = "pipe-http"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "HTTP connectors for pipe -- SSE source, WebSocket (planned)"
license = "MIT"
repository = "https://github.com/hamidr/pipe"
keywords = ["async", "streaming", "sse", "http", "server-sent-events"]
categories = ["asynchronous", "network-programming", "web-programming"]

[dependencies]
pipe = { path = ".." }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }
futures-core = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
