[package]
name = "pipe-io"
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
description = "I/O constructors for pipe -- TCP, UDP, and file convenience APIs"
license = "MIT"
repository = "https://github.com/hamidr/pipe"
keywords = ["async", "streaming", "tcp", "udp", "file-io"]
categories = ["asynchronous", "network-programming"]
exclude = [".github/"]

[dependencies]
pipe = { path = "..", version = "0.6.0" }
tokio = { version = "1", features = ["net", "fs", "io-util", "rt"] }
