[package]
name = "pipe-macros"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "Procedural macros for pipe -- #[operator], #[pull_operator], #[pipe_fn]"
license = "MIT"
repository = "https://github.com/hamidr/pipe"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
